# TradeBridge

./: .gitignore  README.md  env.example  pyproject.toml
src/tradebridge/: __init__.py  cli.py
src/tradebridge/config/: settings.py
src/tradebridge/exchange/: __init__.py  binance_futures.py  models.py
src/tradebridge/market_data/: __init__.py  candles.py  collector.py
src/tradebridge/storage/: sqlite_store.py
tests/: test_candles.py  test_cli.py  test_config.py  test_sqlite_store.py
