[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebridge"
version = "0.1.0"
description = "CLI-first market data collector for crypto trading research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tradebridge = "tradebridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
